Fix profile badge issue
Per request from M'Garza: Profile badges were not lining up properly.

--- a/css/site_pages.css
+++ b/css/site_pages.css
@@ -7396,9 +7396,6 @@ ul.like_list {
 	line-height: 17px !important;
 	margin-left: 10px;
 }
-.page_200 #module_0-68 {
-	clear: both !important;
-}
 .page_10239 .form_button, .page_10278 .form_button {
 	float: right !important;
 }
